# innowise_laboratory

./: .gitignore
lecture_1/my_project/: pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: main.py  queries.sql  school.db
lecture_5/: books.db
lecture_5/book_api/: dbconnect.py  main.py  schemas.py
lecture_6/: Dockerfile  requirements.txt
lecture_6/book_api/: main.py  models.py
my_project/: .gitignore  main.py
